# OC_lab6

./: .gitignore  CMakeLists.txt  README.md  build.sh  win_build.bat  win_start.bat
src/: mainwindow.cpp  mainwindow.h
